--- a/projects/components/tag/src/tag/tag.component.scss
+++ b/projects/components/tag/src/tag/tag.component.scss
@@ -10,7 +10,7 @@
   align-items: center;
   gap: --spacing(1);
   font-weight: 500;
-  border-radius: theme(--radius-full);
+  border-radius: 9999px;
   background: var(--emr-tag-bg);
   color: var(--emr-tag-color);
   border: var(--emr-tag-border);
